Fix table width overflow bug and long code bug

--- a/src/shared/extras.scss
+++ b/src/shared/extras.scss
@@ -4,6 +4,7 @@
     table {
       border-collapse: collapse;
       display: inline-table;
+      max-width: 100%;
 
       thead {
         color: $color-primary;
