--- a/src/shared/inline.scss
+++ b/src/shared/inline.scss
@@ -7,4 +7,8 @@
     max-width: 100%;
     vertical-align: middle;
   }
+
+  code {
+    overflow-wrap: break-word;
+  }
 }
